Rework scrollbar and fixed buttons

--- a/apps/frontend/src/components/container-list/ContainerList.module.css
+++ b/apps/frontend/src/components/container-list/ContainerList.module.css
@@ -1,10 +1,3 @@
 .error {
   color: red;
 }
-
-.containerList {
-  height: calc(100vh - 160px);
-  padding-right: 10px;
-  position: relative;
-  top: 20px;
-}
